Add: postgres as datasource, add API to create user
